--- a/client/index.html
+++ b/client/index.html
@@ -34,16 +34,10 @@
     ></script>
 
     <style>
-      /*  html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-#root {
-  width: 100%;
-  height: 100%;
-} */
+      /*  #root {
+        width: 100%;
+        height: 100%;
+      } */
     </style>
   </head>
   <body>
